Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31811

Message that fallback app transfer is used ends up as error in Issues

    XMLWordPrintable

Details

    • 907c0a140 (15.0)

    Description

      TransferAppSession(***, /Users/**/appcmake_qml.app)Failed to transfer and install application, trying old way ...

      Shouldn't result in an error entry in the Issues pane. This also leads to a popup asking if the user wants to start the application even though there are errors, which is annoying

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-31811
          # Subject Branch Project Status CR V

          Activity

            People

              con Eike Ziller
              con Eike Ziller
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes