src/tools/iostool/iosdevicemanager.cpp
@@ -218,6 +218,7 @@ public:
     void startDeviceLookup(int timeout);
     bool connectToPort(quint16 port, ServiceSocket *fd) override;
     int qmljsDebugPort() const override;
+    void addMessage(const QString &msg);
     void addError(const QString &msg);
     bool writeAll(ServiceSocket fd, const char *cmd, qptrdiff len = -1);
     bool mountDeveloperDiskImage();
@@ -957,6 +958,11 @@ void CommandSession::startDeviceLookup(int timeout)
                                                       this);
 }
 
+void CommandSession::addMessage(const QString &msg)
+{
+    IosDeviceManager::instance()->message(msg);
+}
+
 void CommandSession::addError(const QString &msg)
 {
     qCCritical(loggingCategory) << "CommandSession ERROR:" << msg;
@@ -1303,7 +1309,7 @@ bool AppOpSession::installApp()
     bool success = false;
     if (device) {
         if (!installAppNew()) {
-            addError(QString::fromLatin1(
+            addMessage(QString::fromLatin1(
                 "Failed to transfer and install application, trying old way ..."));
 
             const CFUrl_t bundleUrl(QUrl::fromLocalFile(bundlePath).toCFURL());
